aligned heading to center of page floated image to the right added emphasis to random words corrected capitalization errors

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 img {
 	width:30%;
 	height:30%;
+	float: right;
 }
